--- a/src/config/ecr.yaml
+++ b/src/config/ecr.yaml
@@ -2,9 +2,9 @@
 # ECR repo per app/env.  If create_service=false we skip provisioning.
 
 ecr:
-  - app_name: insizon-app
+  - app_name: insizon
     env: dev
-    service_name: insizon-app          # optional override; default = app_name
+    service_name: insizon          # optional override; default = app_name
     create_service: true
     scan_on_push: true
     lifecycle_policy: "retain-last-20" # placeholder for future use
