--- a/src/config/elasticbeanstalk.yaml
+++ b/src/config/elasticbeanstalk.yaml
@@ -2,9 +2,9 @@
 # Beanstalk environment definitions.
 
 beanstalk:
-  - app_name: insizon-app
+  - app_name: insizon
     env: dev
-    service_name: insizon-app            # default = app_name
+    service_name: insizon            # default = app_name
     create_service: true
 
     # Platform string must match `aws elasticbeanstalk list-available-solution-stacks`
